# castengine_wifi_display

./: .clang-format  AGENTS.md  BUILD.gn  LICENSE  OAT.xml  README.en.md  README.md  README_zh.md  bundle.json  config.gni  hisysevent.yaml  hisysevent_sink.yaml
services/: BUILD.gn
services/agent/: BUILD.gn  agent.cpp  agent.h  agent_def.h
services/agent/session/: base_session.h  isession_listener.h  session_def.h
services/agent/sinkagent/: sink_agent.cpp
services/agent/srcagent/: src_agent.cpp  src_agent.h
services/codec/: BUILD.gn  libsharing_codec.map
services/codec/include/: audio_aac_codec.h  audio_avcodec_decoder.h  audio_decoder.h  audio_encoder.h  audio_g711_codec.h  audio_pcm_processor.h  codec_factory.h  media_frame_pipeline.h  video_audio_sync.h  video_decoder.h  video_encoder.h  video_sink_decoder.h  video_source_encoder.h
services/codec/src/: audio_aac_codec.cpp  audio_avcodec_decoder.cpp  audio_g711_codec.cpp  audio_pcm_processor.cpp  codec_factory.cpp  media_frame_pipeline.cpp  video_audio_sync.cpp  video_sink_decoder.cpp  video_source_encoder.cpp
services/common/: BUILD.gn  common.cpp  common.h  common_macro.h  const_def.h  event_channel.h  event_comm.h  identifier.h  kv_operator.cpp  kv_operator.h  media_log.h  object.h  reflect_registration.cpp  reflect_registration.h  sharing_hisysevent.cpp  sharing_hisysevent.h  sharing_log.h  sharing_sink_hisysevent.cpp  sharing_sink_hisysevent.h
services/configuration/: BUILD.gn  khsharing_config.json  sharing_config.json
services/configuration/include/: config.h  json_parser.h  sharing_data.h
services/configuration/src/: config.cpp  json_parser.cpp  sharing_data.cpp
services/context/: BUILD.gn  context.cpp  context.h  context_manager.cpp  context_manager.h
services/etc/: BUILD.gn  khsharing_service.cfg  sharing_service.cfg
services/event/: BUILD.gn  event_base.cpp  event_base.h  event_manager.cpp  event_manager.h  handle_event_base.h  taskpool.cpp  taskpool.h
services/extend/: BUILD.gn
services/extend/magic_enum/: magic_enum.hpp
services/extend/spandsp_g711/: g711.c  g711.h
services/impl/screen_capture/: BUILD.gn  screen_capture_consumer.cpp  screen_capture_consumer.h  screen_capture_def.h  screen_capture_session.cpp  screen_capture_session.h
services/impl/wfd/: BUILD.gn  wfd_media_def.h  wfd_message.cpp  wfd_message.h  wfd_session_def.h
services/impl/wfd_sink/: wfd_message.cpp  wfd_message.h  wfd_rtp_consumer.h  wfd_sink_session.cpp
services/interaction/: BUILD.gn  interaction.cpp  interaction.h  interaction_manager.cpp  interaction_manager.h  sharing_adapter.h
services/interaction/device_kit/: BUILD.gn  dm_kit.cpp  dm_kit.h
services/interaction/domain/: BUILD.gn  domain_def.h  domain_manager.cpp  domain_manager.h
services/interaction/interprocess/: client_factory.cpp  client_factory.h  i_inter_ipc.h  inter_ipc_client.cpp  inter_ipc_client.h  inter_ipc_client_stub.cpp  inter_ipc_client_stub.h  inter_ipc_death_recipient.h  inter_ipc_proxy.cpp  inter_ipc_proxy.h  inter_ipc_service.cpp  inter_ipc_service.h  inter_ipc_service_death_listener.h  inter_ipc_service_stub.cpp  inter_ipc_service_stub.h  inter_ipc_stub.cpp  inter_ipc_stub.h  inter_ipc_stub_death_listener.h  inter_ipc_sub_stub.cpp  inter_ipc_sub_stub.h  ipc_msg_adapter.cpp  ipc_msg_adapter.h
services/interaction/ipc_codec/: BUILD.gn  ipc_codec.cpp  ipc_codec.h  ipc_codec_bind_macros.h  ipc_msg.h  ipc_msg_bind_macros.h  ipc_msg_decoder.cpp  ipc_msg_decoder.h  ipc_msg_encoder.cpp  ipc_msg_encoder.h
services/interaction/scene/: base_scene.h  scene_format.cpp  scene_format.h  scene_service.h
services/mediachannel/: BUILD.gn  base_channel.h  base_consumer.cpp  base_consumer.h  base_producer.cpp  base_producer.h  buffer_dispatcher.cpp  buffer_dispatcher.h  channel_manager.cpp  channel_manager.h  media_channel.cpp  media_channel.h  media_channel_def.h
services/mediaplayer/: BUILD.gn
services/mediaplayer/include/: audio_play_controller.h  audio_player.h  audio_sink.h  media_controller.h  video_play_controller.h
services/mediaplayer/src/: audio_play_controller.cpp  audio_player.cpp  audio_sink.cpp  media_controller.cpp  video_play_controller.cpp
services/network/: BUILD.gn  libsharing_network.map  network_factory.cpp  network_factory.h  network_session_manager.cpp  network_session_manager.h
services/network/client/: base_client.cpp  base_client.h  tcp_client.cpp  tcp_client.h  udp_client.cpp  udp_client.h
services/network/data/: socket_info.h
services/network/eventhandler/: event_descriptor_listener.cpp  event_descriptor_listener.h  event_handler_manager.cpp  event_handler_manager.h
services/network/interfaces/: iclient.h  iclient_callback.h  inetwork_session.h  inetwork_session_callback.h  iserver.h  iserver_callback.h
services/network/server/: base_server.cpp  base_server.h  tcp_server.cpp  tcp_server.h  udp_server.cpp  udp_server.h
services/network/session/: base_network_session.cpp  base_network_session.h  tcp_session.cpp  tcp_session.h  udp_session.cpp  udp_session.h
services/network/socket/: base_socket.cpp  base_socket.h  socket_utils.cpp  socket_utils.h  tcp_socket.cpp  tcp_socket.h  udp_socket.cpp  udp_socket.h
services/protocol/frame/: aac_frame.cpp  aac_frame.h  frame.cpp  frame.h  frame_merger.cpp  frame_merger.h  h264_frame.cpp  h264_frame.h
services/protocol/mpeg_ts/: BUILD.gn  mpeg_demuxer.h  mpeg_muxer.h  mpeg_ts_demuxer.cpp  mpeg_ts_demuxer.h  mpeg_ts_muxer.cpp  mpeg_ts_muxer.h  mpeg_ts_splitter.cpp  mpeg_ts_splitter.h
services/protocol/rtcp/: BUILD.gn
services/protocol/rtp/: BUILD.gn
services/protocol/rtsp/: BUILD.gn
services/scheduler/: BUILD.gn  scheduler.cpp  scheduler.h
services/sink/: BUILD.gn
services/source/: BUILD.gn
services/utils/: BUILD.gn  base64.h  circular_buffer.h  circular_buffer.hpp  crypto.cpp  crypto.h  data_buffer.cpp  data_buffer.h  data_queue.cpp  data_queue.h  data_share_helper.cpp  data_share_helper.h  preferences_util.cpp  preferences_util.h  timeout_timer.cpp  timeout_timer.h  utils.cpp  utils.h
tests/demo/: BUILD.gn
tests/fuzztest/: BUILD.gn
(+520 files in other folders)
