# Copyright (c) 2023 Shenzhen Kaihong Digital Industry Development Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

group("sharing_packages") {
  deps = [
    "//foundation/CastEngine/castengine_wifi_display/interfaces/innerkits/native/wfd:sharingwfd_client",
    "//foundation/CastEngine/castengine_wifi_display/sa_profile:sharing_sa_profile",
    "//foundation/CastEngine/castengine_wifi_display/services:sharing_services_package",
    "//foundation/CastEngine/castengine_wifi_display/services/etc:sharing_service.rc",
  ]
}
