# Copyright (c) 2023 Shenzhen Kaihong Digital Industry Development Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/CastEngine/castengine_wifi_display/config.gni")

group("sharing_services_package") {
  deps = [
    ":sharing_service",
    "codec:sharing_codec",
    "common:kv_operator",
    "common:sharing_common",
    "network:sharing_network",
    "protocol/rtp:sharing_rtp",
    "utils:sharing_utils",
  ]
}

ohos_shared_library("sharing_service") {
  install_enable = true

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  deps = [
    "agent:sharing_agent_srcs",
    "configuration:sharing_configure_srcs",
    "context:sharing_context_srcs",
    "event:sharing_event_srcs",
    "interaction:sharing_interaction_srcs",
    "mediachannel:sharing_media_channel_srcs",
    "mediaplayer:sharing_media_player_srcs",
    "scheduler:sharing_scheduler_srcs",
  ]

  deps += [
    "codec:sharing_codec",
    "common:kv_operator",
    "common:sharing_common",
    "network:sharing_network",
    "protocol/rtp:sharing_rtp",
    "protocol/rtsp:sharing_rtsp",
    "utils:sharing_utils",
    "//third_party/cJSON:cjson_static",
  ]

  if (sharing_framework_support_wfd) {
    deps += [
      "impl/scene/wfd:sharing_wfd_srcs",
      "impl/screen_capture:sharing_screen_capture_srcs",
      "impl/wfd:sharing_wfd_session_srcs",
    ]
  }

  configs = [ "$SHARING_ROOT_DIR/tests:coverage_flags" ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "audio_framework:audio_capturer",
    "audio_framework:audio_client",
    "audio_framework:audio_renderer",
    "graphic_surface:surface",
    "hilog:libhilog",
    "kv_store:distributeddata_inner",
    "samgr:samgr_proxy",
  ]

  subsystem_name = "castplus"
  part_name = "sharing_framework"
}
