# Copyright (c) 2023 Shenzhen Kaihong Digital Industry Development Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/CastEngine/castengine_wifi_display/config.gni")

group("sharing_services_package") {
  deps = [
    ":sharing_service",
    "codec:sharing_codec",
    "common:kv_operator",
    "common:sharing_common",
    "network:sharing_network",
    "protocol/rtp:sharing_rtp",
    "utils:sharing_utils",
  ]
}

ohos_shared_library("sharing_service") {
  install_enable = true

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
    boundary_sanitize = true
    ubsan = true
    integer_overflow = true
  }

  deps = [
    "agent:sharing_agent_srcs",
    "configuration:sharing_configure_srcs",
    "context:sharing_context_srcs",
    "event:sharing_event_srcs",
    "interaction:sharing_interaction_srcs",
    "mediachannel:sharing_media_channel_srcs",
    "scheduler:sharing_scheduler_srcs",
  ]

  deps += [
    "codec:sharing_codec",
    "common:sharing_common",
    "network:sharing_network",
    "protocol/rtp:sharing_rtp",
    "protocol/rtsp:sharing_rtsp",
    "utils:sharing_utils",
  ]

  if (wifi_display_support_sink) {
    deps += [
      "impl/scene/wfd:sharing_wfd_srcs",
      "impl/wfd:sharing_wfd_session_srcs",
      "sink/agent:sharing_sink_agent_srcs",
      "sink/mediaplayer:sharing_media_player_srcs",
      "sink/impl/wfd:sharing_wfd_sink_session_srcs",
      "sink/impl/scene/wfd:sharing_wfd_sink_scene_srcs",
    ]
  }

  if (wifi_display_support_source) {
    deps += [
      "impl/scene/wfd:sharing_wfd_srcs",
      "impl/wfd:sharing_wfd_session_srcs",
      "source/agent:sharing_source_agent_srcs",
      "source/impl/screen_capture:sharing_screen_capture_srcs",
      "source/impl/wfd:sharing_wfd_source_session_srcs",
      "source/impl/scene/wfd:sharing_wfd_source_scene_srcs",
    ]
  }

  configs = [
    "$SHARING_ROOT_DIR/tests:coverage_flags",
    "$SHARING_ROOT_DIR:wifi_display_feature_flags",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "audio_framework:audio_capturer",
    "audio_framework:audio_client",
    "audio_framework:audio_renderer",
    "cJSON:cjson_static",
    "graphic_2d:librender_service_base",
    "graphic_surface:surface",
    "ipc:ipc_single",
    "hilog:libhilog",
    "samgr:samgr_proxy",
  ]

  subsystem_name = "castplus"
  part_name = "sharing_framework"
}
