# Copyright (c) 2023 Shenzhen Kaihong Digital Industry Development Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/CastEngine/castengine_wifi_display/config.gni")

config("codec_external_include") {
  include_dirs = [
    "//foundation/multimedia/multimedia",
    "//foundation/multimedia/player_framework/interfaces/inner_api/native",
    "//foundation/multimedia/player_framework/services/utils/include",
  ]
}

ohos_shared_library("khsharing_codec") {
  install_enable = true

  public_configs = [ ":codec_external_include" ]

  include_dirs = [
    "$SHARING_ROOT_DIR/services/codec/include",
    "$SHARING_ROOT_DIR/services",
    "$SHARING_ROOT_DIR/services/common",
    "$SHARING_ROOT_DIR/services/protocol",
    "$SHARING_ROOT_DIR/services/protocol/frame",
    "$SHARING_ROOT_DIR/services/extend/spandsp_g711",
  ]

  sources = [
    "$SHARING_ROOT_DIR/services/extend/spandsp_g711/g711.c",
    "$SHARING_ROOT_DIR/services/protocol/frame/frame.cpp",
    "src/audio_aac_codec.cpp",
    "src/audio_g711_codec.cpp",
    "src/codec_factory.cpp",
    "src/media_frame_pipeline.cpp",
    "src/video_sink_decoder.cpp",
  ]

  deps = [
    "$SHARING_ROOT_DIR/services/common:khsharing_common",
    "$SHARING_ROOT_DIR/services/utils:khsharing_utils",
  ]

  defines = []

  if ("${product_name}" == "khp_ftd2000_pc") {
    defines += [ "FTD2000" ]
  }

  external_deps = [
    "c_utils:utilsbase",
    "graphic_2d:surface",
    "hilog:libhilog",
    "ipc:ipc_core",
    "player_framework:media_client",
    "player_framework:media_service_utils",
    "safwk:system_ability_fwk",
  ]

  subsystem_name = "castplus"
  part_name = "sharing_framework"
}
