# Copyright (c) 2023 Shenzhen Kaihong Digital Industry Development Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/CastEngine/castengine_wifi_display/config.gni")

ohos_shared_library("sharing_codec") {
  install_enable = true

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  include_dirs = [
    "$SHARING_ROOT_DIR/services/codec/include",
    "$SHARING_ROOT_DIR/services",
    "$SHARING_ROOT_DIR/services/common",
    "$SHARING_ROOT_DIR/services/protocol",
    "$SHARING_ROOT_DIR/services/protocol/frame",
  ]

  sources = [
    "$SHARING_ROOT_DIR/services/protocol/frame/frame.cpp",
    "$SHARING_ROOT_DIR/services/protocol/frame/h264_frame.cpp",
    "src/audio_aac_codec.cpp",
    "src/audio_g711_codec.cpp",
    "src/codec_factory.cpp",
    "src/media_frame_pipeline.cpp",
    "src/video_sink_decoder.cpp",
    "src/video_source_encoder.cpp",
  ]

  deps = [
    "$SHARING_ROOT_DIR/services/common:sharing_common",
    "$SHARING_ROOT_DIR/services/utils:sharing_utils",
  ]

  external_deps = [
    "av_codec:av_codec_client",
    "c_utils:utilsbase",
    "graphic_surface:surface",
    "hilog:libhilog",
    "ipc:ipc_core",
    "media_foundation:media_foundation",
    "safwk:system_ability_fwk",
  ]

  subsystem_name = "castplus"
  part_name = "sharing_framework"
}
