# Copyright (c) 2023 Shenzhen Kaihong Digital Industry Development Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/CastEngine/castengine_wifi_display/config.gni")

ohos_shared_library("sharing_common") {
  install_enable = true
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
    boundary_sanitize = true
    ubsan = true
    integer_overflow = true
  }

  include_dirs = [
    "$SHARING_ROOT_DIR/services",
    "$SHARING_ROOT_DIR/services/common",
  ]

  sources = [
    "common.cpp",
    "reflect_registration.cpp",
    "sharing_hisysevent.cpp",
    "sharing_sink_hisysevent.cpp",
  ]
  deps = [
    "$SHARING_ROOT_DIR/services/utils:sharing_utils",
  ]

  external_deps = [
    "graphic_surface:surface",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
  ]

  part_name = "sharing_framework"
  subsystem_name = "castplus"
}


ohos_static_library("kv_operator") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  sources = [ "kv_operator.cpp" ]

  include_dirs = []

  external_deps = [
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "ability_runtime:app_context",
    "ability_runtime:app_manager",
    "ability_runtime:dataobs_manager",
    "ability_runtime:runtime",
    "hilog:libhilog",
    "kv_store:distributeddata_inner",
  ]

  part_name = "sharing_framework"
  subsystem_name = "castplus"
}
