# Copyright (c) 2023 Shenzhen Kaihong Digital Industry Development Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

group("third_party_package") {
  deps = [
    ":khsharing_mpeg",
  ]
}

config("libmpeg_config") {
  include_dirs = [
    "mpeg/include",
    "mpeg/source",
  ]
  cflags = [
    "-Wno-error", 
  ]
}

ohos_shared_library("khsharing_mpeg") {
  stable = true
  configs = [ ":libmpeg_config" ]

  sources = [
    "mpeg/source/mpeg-crc32.c",
    "mpeg/source/mpeg-element-descriptor.c",
    "mpeg/source/mpeg-muxer.c",
    "mpeg/source/mpeg-pack-header.c",
    "mpeg/source/mpeg-packet.c",
    "mpeg/source/mpeg-pat.c",
    "mpeg/source/mpeg-pes.c",
    "mpeg/source/mpeg-pmt.c",
    "mpeg/source/mpeg-ps-dec.c",
    "mpeg/source/mpeg-ps-enc.c",
    "mpeg/source/mpeg-psd.c",
    "mpeg/source/mpeg-psm.c",
    "mpeg/source/mpeg-sdt.c",
    "mpeg/source/mpeg-system-header.c",
    "mpeg/source/mpeg-ts-dec.c",
    "mpeg/source/mpeg-ts-enc.c",
    "mpeg/source/mpeg-ts-h264.c",
    "mpeg/source/mpeg-ts-h265.c",
    "mpeg/source/mpeg-util.c",
  ]

  part_name = "sharing_framework"
  subsystem_name = "castplus"
}
