# Copyright (c) 2023 Shenzhen Kaihong Digital Industry Development Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/CastEngine/castengine_wifi_display/config.gni")

ohos_source_set("sharing_media_channel_srcs") {
  cflags = [
    "-Wno-invalid-noreturn",
    "-Wno-deprecated-builtins",
  ]

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  sources = [
    "base_consumer.cpp",
    "base_producer.cpp",
    "buffer_dispatcher.cpp",
    "channel_manager.cpp",
    "media_channel.cpp",
  ]

  configs = [ "$SHARING_ROOT_DIR/tests:coverage_flags" ]

  include_dirs = [
    "//utils/native/base/include",
    "$SHARING_ROOT_DIR/services",
    "$SHARING_ROOT_DIR/services/mediaplayer/include",
    "$SHARING_ROOT_DIR/services/mediachannel",
    "$SHARING_ROOT_DIR/services/utils",
    "$SHARING_ROOT_DIR/services/common",
    "$SHARING_ROOT_DIR/services/codec/include",
    "$SHARING_ROOT_DIR/services/protocol",
    "$SHARING_ROOT_DIR/services/protocol/frame",
    "$SHARING_ROOT_DIR/services/protocol/rtp",
    "$SHARING_ROOT_DIR/services/protocol/rtp/interfaces",
    "$SHARING_ROOT_DIR/services/extend/magic_enum",
    "//base/security/access_token/interfaces/innerkits/accesstoken/include",
    "//base/security/access_token/interfaces/innerkits/token_setproc/include",
    "//drivers/peripheral/camera/interfaces/metadata/include",
    "//utils/system/safwk/native/include",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "audio_framework:audio_capturer",
    "audio_framework:audio_client",
    "audio_framework:audio_renderer",
    "av_codec:av_codec_client",
    "camera_framework:camera_framework",
    "drivers_interface_camera:metadata",
    "graphic_surface:surface",
    "hilog:libhilog",
  ]

  subsystem_name = "castplus"
  part_name = "sharing_framework"
}
