# Copyright (c) 2023 Shenzhen Kaihong Digital Industry Development Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/CastEngine/castengine_wifi_display/config.gni")

ohos_source_set("sharing_media_player_srcs") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  cflags = [
    "-Wno-invalid-noreturn",
    "-Wno-deprecated-builtins",
  ]

  sources = [
    "src/audio_play_controller.cpp",
    "src/audio_player.cpp",
    "src/audio_sink.cpp",
    "src/media_controller.cpp",
    "src/video_play_controller.cpp",
  ]

  include_dirs = [
    "$SHARING_ROOT_DIR/services",
    "$SHARING_ROOT_DIR/services/mediaplayer/include",
    "$SHARING_ROOT_DIR/services/protocol/frame",
    "$SHARING_ROOT_DIR/services/extend/magic_enum",
    "$SHARING_ROOT_DIR/services/mediachannel",
    "$SHARING_ROOT_DIR/services/codec/include",
    "//foundation/multimedia/audio_framework/interfaces/inner_api/native/audiomanager/include",
    "//foundation/multimedia/audio_framework/interfaces/inner_api/native/audiocommon/include",
  ]

  deps = [
    "$SHARING_ROOT_DIR/services/common:sharing_common",
    "$SHARING_ROOT_DIR/services/utils:sharing_utils",
  ]

  external_deps = [
    "audio_framework:audio_renderer",
    "av_codec:av_codec_client",
    "graphic_surface:surface",
    "hilog:libhilog",
  ]

  subsystem_name = "castplus"
  part_name = "sharing_framework"
}
