# Copyright (c) 2023 Shenzhen Kaihong Digital Industry Development Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/CastEngine/castengine_wifi_display/config.gni")

ohos_source_set("sharing_scheduler_srcs") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  include_dirs = [
    "//utils/native/base/include",
    "$SHARING_ROOT_DIR/services",
    "$SHARING_ROOT_DIR/services/common",
    "$SHARING_ROOT_DIR/services/utils",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_core/include/",
    "//foundation/CastEngine/castengine_wifi_display/services/interaction/device_kit",
    "//foundation/CastEngine/castengine_wifi_display/services/interaction/domain",
    "//foundation/CastEngine/castengine_wifi_display/services/interaction/ipc_codec",
    "//foundation/CastEngine/castengine_wifi_display/services/interaction/domain/rpc",
    "//foundation/systemabilitymgr/samgr/interfaces/innerkits/samgr_proxy/include",
    "//foundation/systemabilitymgr/safwk/services/safwk/include",
  ]

  sources = [ "scheduler.cpp" ]
  configs = [ "$SHARING_ROOT_DIR/tests:coverage_flags" ]
  external_deps = [
    "device_manager:devicemanagersdk",
    "graphic_surface:surface",
    "hilog:libhilog",
    "samgr:samgr_proxy",
  ]

  subsystem_name = "castplus"
  part_name = "sharing_framework"
}
