# Copyright (c) 2023 Shenzhen Kaihong Digital Industry Development Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/CastEngine/castengine_wifi_display/config.gni")

group("demo_test") {
  deps = [
    "codec:sharing_codec_demo",
    "delaytest:loop_back_demo",
    "interaction:sharing_wfd_source_demo",
    "network:sharing_network_client_demo",
    "network:sharing_network_server_demo",
    "network:udp_client_demo",
    "network:udp_server_demo",
    "rtp:sharing_rtp_dec_demo",
    "rtp:sharing_rtp_enc_demo",
    "scheduler:sharing_scheduler_demo",
    "wfd:sharing_wfd_demo",
  ]
}
