# Copyright (c) 2024 Shenzhen Kaihong Digital Industry Development Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../config.gni")

group("wfd_fuzz_test") {
  testonly = true
  deps = [
    "./sink_fuzzer/wfdappendsurface_fuzzer:fuzztest",
    "./sink_fuzzer/wfdclose_fuzzer:fuzztest",
    "./sink_fuzzer/wfdgetsinkconfig_fuzzer:fuzztest",
    "./sink_fuzzer/wfdmute_fuzzer:fuzztest",
    "./sink_fuzzer/wfdpause_fuzzer:fuzztest",
    "./sink_fuzzer/wfdplay_fuzzer:fuzztest",
    "./sink_fuzzer/wfdremovesurface_fuzzer:fuzztest",
    "./sink_fuzzer/wfdsetmediaformat_fuzzer:fuzztest",
    "./sink_fuzzer/wfdsetscenetype_fuzzer:fuzztest",
    "./sink_fuzzer/wfdsinksetlistener_fuzzer:fuzztest",
    "./sink_fuzzer/wfdstart_fuzzer:fuzztest",
    "./sink_fuzzer/wfdunmute_fuzzer:fuzztest",
    "./source_fuzzer/wfdadddevice_fuzzer:fuzztest",
    "./source_fuzzer/wfddiscover_fuzzer:fuzztest",
    "./source_fuzzer/wfdsourcesetlistener_fuzzer:fuzztest",
  ]
}
