# Copyright (c) 2023 Shenzhen Kaihong Digital Industry Development Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/CastEngine/castengine_wifi_display/config.gni")

ohos_source_set("sharing_screen_capture_srcs") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  include_dirs = [
    "$SHARING_ROOT_DIR/services",
    "$SHARING_ROOT_DIR/services/impl/screen_capture",
    "$SHARING_ROOT_DIR/services/impl/screen_capture/mediasource",
    "$SHARING_ROOT_DIR/services/utils",
    "$SHARING_ROOT_DIR/services/common",
    "$SHARING_ROOT_DIR/services/codec/include",
    "$SHARING_ROOT_DIR/services/protocol/frame",
    "$SHARING_ROOT_DIR/services/extend/magic_enum",
  ]

  sources = [
    "$SHARING_ROOT_DIR/services/impl/screen_capture/mediasource/video_source_screen.cpp",
    "$SHARING_ROOT_DIR/services/impl/screen_capture/screen_capture_consumer.cpp",
    "$SHARING_ROOT_DIR/services/impl/screen_capture/screen_capture_session.cpp",
  ]

  deps = [
    "$SHARING_ROOT_DIR/services/agent:sharing_agent_srcs",
    "$SHARING_ROOT_DIR/services/common:sharing_common",
    "$SHARING_ROOT_DIR/services/interaction:sharing_interaction_srcs",
    "$SHARING_ROOT_DIR/services/mediachannel:sharing_media_channel_srcs",
  ]

  external_deps = [
    "av_codec:av_codec_client",
    "c_utils:utils",
    "drivers_peripheral_display:hdi_gralloc_client",
    "graphic_surface:surface",
    "graphic_surface:sync_fence",
    "hilog:libhilog",
    "window_manager:libdm",
  ]

  subsystem_name = "castplus"
  part_name = "sharing_framework"
}
